--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<div class="name-top">
+				<div class="col-md-12 col-xs-12">
+					<div class="name-top bounceInLeft animated">
 						ADStroy
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="phrase-top">
+				<div class="col-md-12 col-xs-12">
+					<div class="phrase-top bounceInRight animated">
 						Интерьер - Как произведение искусства!
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="button-works">
-						<a href="#"><img src="img/icon-play.PNG" alt="">Показать все работы</a>
+				<div class="col-md-12 col-xs-12">
+					<div class="button-works bounceIn animated">
+						<a href="#works"><img src="img/icon-play.PNG" alt="">Показать все работы</a>
 					</div>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 		<div class="content_banner">
 			Дизайн - проектирование
 			<div class="arrow">
-				<img src="img/arrow.PNG" alt="">
+			<a href="#disign"><img src="img/arrow.PNG" alt=""></a>
 			</div>
 		</div>
 		<div class="line" style="background-image: url(img/line.PNG)"></div>
@@ -86,15 +86,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-8">
-					<div class="icon-top-cont">
-						<img src="img/icon1.PNG" alt="">
+					<div id="disign" class="icon-top-cont">
+						<img src="img/icon1.PNG" class="fadeIn animated" alt="">
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-sm-offset-1 col-md-offset-1">
 					<div class="top-cont-text">
-						<div class="cont-text">
+						<div class="cont-text fadeIn wow">
 							Дизайн жилого пространства в частности - это творческая деятельность, цель  которой заключается в разработке комфортного и функционального  пространства, отвечающего стилевым предпочтениям заказчика.
 						</div>
 					</div>
@@ -111,16 +111,16 @@
 				<div class="col-md-6 col-sm-9 col-sm-offset-1 col-md-offset-1">
 					<div class="styles">
 						<ul>
-							<li><img src="img/23809.png" alt="">Современные стили</li>
-							<li><img src="img/german_house1600.png" alt="">Исторические стили</li>
-							<li><img src="img/geometrie.png" alt="">Перепланировка,  Согласование помещений</li>
+							<li class="bounceInRight wow"><img src="img/23809.png" alt="">Современные стили</li>
+							<li class="bounceInRight wow" data-wow-delay=".2s"><img src="img/german_house1600.png" alt="">Исторические стили</li>
+							<li class="bounceInRight wow" data-wow-delay=".3s"><img src="img/geometrie.png" alt="">Перепланировка,  Согласование помещений</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="slogan-top">
+					<div class="slogan-top slideInDown animated">
 						Доступность цен на дома – один из основных принципов нашей работы!
 					</div> 
 				</div>
@@ -136,19 +136,21 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<div class="title-service">
+						<div id="works" class="title-service">
 							Дизайн - проекты
 						</div>
 						<div class="services">
 							<ul>
-								<li><img src="img/arow_ok.PNG" alt="">Дизайн интерьера</li>
-								<li><img src="img/arow_ok.PNG" alt="">Проектирование корпусной и встроенной мебели</li>
-								<li><img src="img/arow_ok.PNG" alt="">Авторская мебель</li>
-								<li><img src="img/arow_ok.PNG" alt="">Весь асортимент декоративных материалов</li>
-								<li><img src="img/arow_ok.PNG" alt="">Индивидуальное эскизирование</li>
+								<li class="bounceInRight wow"><i class="fa fa-check" aria-hidden="true"></i>Дизайн интерьера</li>
+								<li class="bounceInRight wow" data-wow-delay=".2s"><i class="fa fa-check" aria-hidden="true"></i>Проектирование корпусной и встроенной мебели</li>
+								<li class="bounceInRight wow" data-wow-delay=".3s"><i class="fa fa-check" aria-hidden="true"></i>Авторская мебель</li>
+								<li class="bounceInRight wow" data-wow-delay=".4s"><i class="fa fa-check" aria-hidden="true"></i>Весь асортимент декоративных материалов</li>
+								<li class="bounceInRight wow" data-wow-delay=".5s"><i class="fa fa-check" aria-hidden="true"></i>Индивидуальное эскизирование</li>
 							</ul>	
 						</div>
 					</div>
+
+					<!-- 																																	FOTORAMA START 																					-->
 					<div class="col-md-6">
 						<div class="foto">
 							<div class="fotorama"  data-nav="thumbs" data-thumbwidth="110" data-thumbheight="60" data-thumbborderwidth="5"
@@ -166,129 +168,209 @@
 		</div>
 	</div>
 </div>
+
+<!-- 																																			FOTORAMA END 																						-->
+
 <div class="content_banner">
 	Архитектурное проектирование
 	<div class="arrow">
+	<a href="#section">
 		<img src="img/arrow.PNG" alt="">
+	</a>
 	</div>
 </div>
 
-<div class="arh">
-	<div class="row">
-		<div class="col-md-6 pad-us">
-			<div class="recon" style="background-image: url(img/deshouse.jpg)">
-				<div class="overlay">
-					<div class="title">
-						Реконструкция
-					</div>
-					<div class="arh-text" >
-						Переоборудование жилого дома с целью совершенствования его объемно - планировочных решений и архитектурных качеств, а также конструктивно - технических и инженерно - технических решений с учетом современных требований при изменении объема жилого дома путем пристройки новых объемно - планировочных элементов, в том числе квартир или их помещений, лестнично - лифтовых узлов, помещений нежилого назначения, а также надстройки или разборки частей жилого дома
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-6 pad-us">
-			<div class="arh-img" style="background-image: url(img/FAAHe8iuI-M.jpg)">
-			</div>
-		</div>
-	</div>
-	<!--                                                        TWO SECTION                                          -->
-	<div class="row">
-		<div class="col-md-6 pad-us">
-			<div class="arh-img img-bor" style="background-image: url(img/V0XxAWba95k.jpg)">
-			</div>
-		</div>
-		<div class="col-md-6 pad-us">
-			<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
-				<div class="overlay">
-					<div class="title-two">
-						Самые доступные цены на дома и качественная работа!
+<!-- 																																SECTION START																			 -->
+<div class="arh hidden-xs">
+		<div class="row">
+			<div class="col-md-6 pad-us">
+				<div class="recon" style="background-image: url(img/deshouse.jpg)">
+					<div class="overlay">
+						<div id="section" class="title">
+							Реконструкция
+						</div>
+						<div class="arh-text" >
+							Переоборудование жилого дома с целью совершенствования его объемно - планировочных решений и архитектурных качеств, а также конструктивно - технических и инженерно - технических решений с учетом современных требований при изменении объема жилого дома путем пристройки новых объемно - планировочных элементов, в том числе квартир или их помещений, лестнично - лифтовых узлов, помещений нежилого назначения, а также надстройки или разборки частей жилого дома
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<!--                                                        THREE SECTION                                          -->
-	<div class="row">
-		<div class="col-md-6 pad-us">
-			<div class="recon" style="background-image: url(img/DesHome1.jpg)">
-				<div class="overlay">
-					<div class="title-three">
-						Вы хотите построить свой загородный дом для отдыха или коттедж для постоянного проживания? 
-					</div>
+			<div class="col-md-6 pad-us">
+				<div class="arh-img img-use" style="background-image: url(img/FAAHe8iuI-M.jpg)">
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6 pad-us">
-			<div class="arh-img" style="background-image: url(img/T6PTAJgWXD4.jpg)">
-			</div>
-		</div>
-	</div>
-	<!--                                                        FOUR SECTION                                          -->
-	<div class="row">
-		<div class="col-md-6 pad-us">
-			<div class="arh-img img-bor" style="background-image: url(img/Tq6YC-IKvAE.jpg)">
-			</div>
-		</div>
-		<div class="col-md-6 pad-us">
-			<div class="recon recon-two" style="background-image: url(img/DesHome2.jpg)">
-				<div class="overlay">
-					<div class="title-four">
-						Мы можем  предложить вам разработку проектов  загородных домов, коттеджей, особняков, усадеб!
+		<!--                                                        TWO SECTION                                          -->
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+				<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
+					<div class="overlay">
+						<div class="title-two">
+							Самые доступные цены на дома и качественная работа!
+						</div>
 					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+				<div class="arh-img img-bor" style="background-image: url(img/V0XxAWba95k.jpg)">
+				</div>
+			</div>
+		</div>
+		<!--                                                        THREE SECTION                                          -->
+		<div class="row">
+			<div class="col-md-6 pad-us">
+				<div class="recon" style="background-image: url(img/DesHome1.jpg)">
+					<div class="overlay">
+						<div class="title-three">
+							Вы хотите построить свой загородный дом для отдыха или коттедж для постоянного проживания? 
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 pad-us">
+				<div class="arh-img" style="background-image: url(img/T6PTAJgWXD4.jpg)">
+				</div>
+			</div>
+		</div>
+		<!--                                                        FOUR SECTION                                          -->
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+				<div class="recon recon-two" style="background-image: url(img/DesHome2.jpg)">
+					<div class="overlay">
+						<div class="title-four">
+							Мы можем  предложить вам разработку проектов  загородных домов, коттеджей, особняков, усадеб!
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+				<div class="arh-img img-bor" style="background-image: url(img/Tq6YC-IKvAE.jpg)">
+				</div>
+			</div>
+		</div>
+</div>
+<!-- 																																		mobile ver 																						-->
+<div class="arh hidden-sm hidden-md hidden-lg">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 pad-us">
+				<div class="recon" style="background-image: url(img/deshouse.jpg)">
+					<div class="overlay">
+						<div class="title">
+							Реконструкция
+						</div>
+						<div class="arh-text" >
+							Переоборудование жилого дома с целью совершенствования его объемно - планировочных решений и архитектурных качеств, а также конструктивно - технических и инженерно - технических решений с учетом современных требований при изменении объема жилого дома путем пристройки новых объемно - планировочных элементов, в том числе квартир или их помещений, лестнично - лифтовых узлов, помещений нежилого назначения, а также надстройки или разборки частей жилого дома
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 pad-us">
+				<div class="arh-img img-use" style="background-image: url(img/FAAHe8iuI-M.jpg)">
+				</div>
+			</div>
+		</div>
+		<!--                                                        TWO SECTION                                          -->
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+				<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
+					<div class="overlay">
+						<div class="title-two">
+							Самые доступные цены на дома и качественная работа!
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+				<div class="arh-img img-bor" style="background-image: url(img/V0XxAWba95k.jpg)">
+				</div>
+			</div>
+		</div>
+		<!--                                                        THREE SECTION                                          -->
+		<div class="row">
+			<div class="col-md-6 pad-us">
+				<div class="recon" style="background-image: url(img/DesHome1.jpg)">
+					<div class="overlay">
+						<div class="title-three">
+							Вы хотите построить свой загородный дом для отдыха или коттедж для постоянного проживания? 
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 pad-us">
+				<div class="arh-img" style="background-image: url(img/T6PTAJgWXD4.jpg)">
+				</div>
+			</div>
+		</div>
+		<!--                                                        FOUR SECTION                                          -->
+		<div class="row">
+			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+				<div class="recon recon-two" style="background-image: url(img/DesHome2.jpg)">
+					<div class="overlay">
+						<div class="title-four">
+							Мы можем  предложить вам разработку проектов  загородных домов, коттеджей, особняков, усадеб!
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+				<div class="arh-img img-bor" style="background-image: url(img/Tq6YC-IKvAE.jpg)">
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 <!--                                                        END SECTION                                          -->
+<!-- 																											mobile ver end																						-->
 <div class="content_banner">
 	Также мы можем предложить следующие услуги
 	<div class="arrow">
+	<a href="#services">
 		<img src="img/arrow.PNG" alt="">
+	</a>
 	</div>
 </div>
 
-<div class="add_service">
+<div id="services" class="add_service">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<div class="add_service_one">
-					<div class="add_ic">
+			<div class="col-md-3 col-sm-3">
+				<div class="add_service_one fadeInDown wow">
+					<div class="add_ic hidden-xs">
 						<img src="img/55.png" alt="">
 					</div>
 					<div class="add_text">
-						Комплексный подбор строительных и отделочных материалов
+						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Комплексный подбор строительных и отделочных материалов
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<div class="add_service_two">
-					<div class="add_ic">
+			<div class="col-md-3 col-sm-3">
+				<div class="add_service_two fadeInDown wow" data-wow-delay=".2s">
+					<div class="add_ic hidden-xs">
 						<img src="img/23841-200.png" alt="">
 					</div>
 					<div class="add_text">
-						Производство отделочных работ
+						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Производство отделочных работ
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<div class="add_service_three">
-					<div class="add_ic">
-						<img src="img/12.png" alt="">
+			<div class="col-md-3 col-sm-3">
+				<div class="add_service_three fadeInDown wow" data-wow-delay=".3s">
+					<div class="add_ic hidden-xs">
+						<img src="img/65.png" alt="">
 					</div>
 					<div class="add_text">
-						Ландшафтное проектирование
+						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<div class="add_service_four">
-					<div class="add_ic">
+			<div class="col-md-3 col-sm-3">
+				<div class="add_service_four fadeInDown wow" data-wow-delay=".4s">
+					<div class="add_ic hidden-xs">
 						<img src="img/clean.png" alt="">
 					</div>
 					<div class="add_text">
-						Клининговые работы
+						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Клининговые работы
 					</div>
 				</div>
 			</div>
@@ -302,7 +384,7 @@
 <footer class="main_foot">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="org">
 					<div class="title-org">
 						ооо салон
@@ -312,7 +394,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="timetable">
 					<h4>График работы</h4>
 					<p>пн-чт с 9 - 17:30</p>
@@ -321,7 +403,7 @@
 					<p>650014, г.Кемерово, пр. Шахтеров, дом 123- офис 371</p>
 				</div>
 			</div>
-			<div class="col-md-3 col-md-offset-1">
+			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="contacts">
 					<h4>Телефон</h4>
 					<p>8-3842-77-40-67</p>
@@ -330,12 +412,15 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<hr class="line-bottom">
+	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-12 col-sm-12">
 				<div class="links">
-					<p></p><a href=""><i class="fa fa-vk" aria-hidden="true"></i>vk.com/ad_stroy2005</a></p>
-					<p><a href=""><i class="fa fa-odnoklassniki" aria-hidden="true"></i>ok.ru/profile/585690641432</a></p>
-					<p><a href=""><i class="fa fa-twitter" aria-hidden="true"></i>@ADS_Stroy2005</a></p>
+					<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
+					<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
