--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>ADStroi</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,8 +45,8 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-5">
-					<div class="callback">
-						<a href="#">Обратная связь</a>
+					<div class="callback_button">
+						<a href="#callback" class="popup-with-zoom-anim">Обратная связь</a>
 					</div>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 		<div class="content_banner">
 			Дизайн - проектирование
 			<div class="arrow">
-			<a href="#disign"><img src="img/arrow.PNG" alt=""></a>
+				<a href="#disign"><img src="img/arrow.PNG" alt=""></a>
 			</div>
 		</div>
 		<div class="line" style="background-image: url(img/line.PNG)"></div>
@@ -174,80 +174,80 @@
 <div class="content_banner">
 	Архитектурное проектирование
 	<div class="arrow">
-	<a href="#section">
-		<img src="img/arrow.PNG" alt="">
-	</a>
+		<a href="#section">
+			<img src="img/arrow.PNG" alt="">
+		</a>
 	</div>
 </div>
 
 <!-- 																																SECTION START																			 -->
 <div class="arh hidden-xs">
-		<div class="row">
-			<div class="col-md-6 pad-us">
-				<div class="recon" style="background-image: url(img/deshouse.jpg)">
-					<div class="overlay">
-						<div id="section" class="title">
-							Реконструкция
-						</div>
-						<div class="arh-text" >
-							Переоборудование жилого дома с целью совершенствования его объемно - планировочных решений и архитектурных качеств, а также конструктивно - технических и инженерно - технических решений с учетом современных требований при изменении объема жилого дома путем пристройки новых объемно - планировочных элементов, в том числе квартир или их помещений, лестнично - лифтовых узлов, помещений нежилого назначения, а также надстройки или разборки частей жилого дома
-						</div>
+	<div class="row">
+		<div class="col-md-6 pad-us">
+			<div class="recon" style="background-image: url(img/deshouse.jpg)">
+				<div class="overlay">
+					<div id="section" class="title">
+						Реконструкция
+					</div>
+					<div class="arh-text" >
+						Переоборудование жилого дома с целью совершенствования его объемно - планировочных решений и архитектурных качеств, а также конструктивно - технических и инженерно - технических решений с учетом современных требований при изменении объема жилого дома путем пристройки новых объемно - планировочных элементов, в том числе квартир или их помещений, лестнично - лифтовых узлов, помещений нежилого назначения, а также надстройки или разборки частей жилого дома
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 pad-us">
-				<div class="arh-img img-use" style="background-image: url(img/FAAHe8iuI-M.jpg)">
-				</div>
+		</div>
+		<div class="col-md-6 pad-us">
+			<div class="arh-img img-use" style="background-image: url(img/FAAHe8iuI-M.jpg)">
 			</div>
 		</div>
-		<!--                                                        TWO SECTION                                          -->
-		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
-				<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
-					<div class="overlay">
-						<div class="title-two">
-							Самые доступные цены на дома и качественная работа!
-						</div>
+	</div>
+	<!--                                                        TWO SECTION                                          -->
+	<div class="row">
+		<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+			<div class="recon recon-two" style="background-image: url(img/DesHome.jpg)">
+				<div class="overlay">
+					<div class="title-two">
+						Самые доступные цены на дома и качественная работа!
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
-				<div class="arh-img img-bor" style="background-image: url(img/V0XxAWba95k.jpg)">
-				</div>
+		</div>
+		<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+			<div class="arh-img img-bor" style="background-image: url(img/V0XxAWba95k.jpg)">
 			</div>
 		</div>
-		<!--                                                        THREE SECTION                                          -->
-		<div class="row">
-			<div class="col-md-6 pad-us">
-				<div class="recon" style="background-image: url(img/DesHome1.jpg)">
-					<div class="overlay">
-						<div class="title-three">
-							Вы хотите построить свой загородный дом для отдыха или коттедж для постоянного проживания? 
-						</div>
+	</div>
+	<!--                                                        THREE SECTION                                          -->
+	<div class="row">
+		<div class="col-md-6 pad-us">
+			<div class="recon" style="background-image: url(img/DesHome1.jpg)">
+				<div class="overlay">
+					<div class="title-three">
+						Вы хотите построить свой загородный дом для отдыха или коттедж для постоянного проживания? 
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 pad-us">
-				<div class="arh-img" style="background-image: url(img/T6PTAJgWXD4.jpg)">
-				</div>
+		</div>
+		<div class="col-md-6 pad-us">
+			<div class="arh-img" style="background-image: url(img/T6PTAJgWXD4.jpg)">
 			</div>
 		</div>
-		<!--                                                        FOUR SECTION                                          -->
-		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
-				<div class="recon recon-two" style="background-image: url(img/DesHome2.jpg)">
-					<div class="overlay">
-						<div class="title-four">
-							Мы можем  предложить вам разработку проектов  загородных домов, коттеджей, особняков, усадеб!
-						</div>
+	</div>
+	<!--                                                        FOUR SECTION                                          -->
+	<div class="row">
+		<div class="col-xs-12 col-md-6 col-md-push-6 pad-us">
+			<div class="recon recon-two" style="background-image: url(img/DesHome2.jpg)">
+				<div class="overlay">
+					<div class="title-four">
+						Мы можем  предложить вам разработку проектов  загородных домов, коттеджей, особняков, усадеб!
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
-				<div class="arh-img img-bor" style="background-image: url(img/Tq6YC-IKvAE.jpg)">
-				</div>
+		</div>
+		<div class="col-xs-12 col-md-6 col-md-pull-6 pad-us">
+			<div class="arh-img img-bor" style="background-image: url(img/Tq6YC-IKvAE.jpg)">
 			</div>
 		</div>
+	</div>
 </div>
 <!-- 																																		mobile ver 																						-->
 <div class="arh hidden-sm hidden-md hidden-lg">
@@ -325,9 +325,9 @@
 <div class="content_banner">
 	Также мы можем предложить следующие услуги
 	<div class="arrow">
-	<a href="#services">
-		<img src="img/arrow.PNG" alt="">
-	</a>
+		<a href="#services">
+			<img src="img/arrow.PNG" alt="">
+		</a>
 	</div>
 </div>
 
@@ -340,7 +340,7 @@
 						<img src="img/55.png" alt="">
 					</div>
 					<div class="add_text">
-						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Комплексный подбор строительных и отделочных материалов
+						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Комплексный подбор строительных и отделочных материалов</p>
 					</div>
 				</div>
 			</div>
@@ -350,17 +350,17 @@
 						<img src="img/23841-200.png" alt="">
 					</div>
 					<div class="add_text">
-						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Производство отделочных работ
+						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Производство отделочных работ</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-3">
 				<div class="add_service_three fadeInDown wow" data-wow-delay=".3s">
 					<div class="add_ic hidden-xs">
-						<img src="img/44.png" alt="">
+						<img src="img/65.png" alt="">
 					</div>
 					<div class="add_text">
-						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование
+						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование</p>
 					</div>
 				</div>
 			</div>
@@ -370,7 +370,7 @@
 						<img src="img/clean.png" alt="">
 					</div>
 					<div class="add_text">
-						<i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Клининговые работы
+						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Клининговые работы</p>
 					</div>
 				</div>
 			</div>
@@ -418,9 +418,9 @@
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<div class="links">
-					<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
-					<a href=""><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
-					<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="https://vk.com/ad_stroy2005"><i class="fa fa-vk" aria-hidden="true"></i></a>
+					<a href="https://ok.ru/profile/585690641432"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/search?q=%40ADS_Stroy2005&src=typd"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -428,8 +428,40 @@
 
 
 </footer>
-<link rel="stylesheet" href="css/main.min.css">
-<script src="js/scripts.min.js"></script>
+
+<div class="hidden">
+
+
+	<form class="popup-form callback zoom-anim-dialog" id="callback">
+
+		<div class="success"><b>Спасибо за заявку! <br>
+			Мы скоро с Вами свяжемся</b></div>
+
+
+			<input type="hidden" name="project_name" value="ADStroi">
+			<input type="hidden" name="admin_email" value="mail@mail.ru">
+			<input type="hidden" name="form_subject" value="Новая заявка с сайта">
+
+
+
+			<h3>Заказать звонок</h3>
+			<label>
+				<span>Ваше имя:</span>
+				<input class="custominput" type="text" name="name" placeholder="Введите ваше имя...">
+			</label>
+			<label>
+				<span>Ваш телефон:</span>
+				<input class="custominput" type="text" name="phone" placeholder="Введите ваш телефон..." required>
+			</label>
+			<div class="text-right">
+				<button class="button"><span><b>Отправить</b></span></button>
+			</div>
+		</form>
+
+	</div>
+
+	<link rel="stylesheet" href="css/main.min.css">
+	<script src="js/scripts.min.js"></script>
 
 </body>
 </html>
