--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -439,7 +439,7 @@
 
 
 			<input type="hidden" name="project_name" value="ADStroi">
-			<input type="hidden" name="admin_email" value="mail@mail.ru">
+			<input type="hidden" name="admin_email" value="denis_vorobev_97@mail.ru">
 			<input type="hidden" name="form_subject" value="Новая заявка с сайта">
 
 
