--- a/adstroi/index.html
+++ b/adstroi/index.html
@@ -357,7 +357,7 @@
 			<div class="col-md-3 col-sm-3">
 				<div class="add_service_three fadeInDown wow" data-wow-delay=".3s">
 					<div class="add_ic hidden-xs">
-						<img src="img/65.png" alt="">
+						<img src="img/64.PNG" alt="">
 					</div>
 					<div class="add_text">
 						<p><i class="fa fa-check hidden-sm hidden-md hidden-lg" aria-hidden="true"></i>Ландшафтное проектирование</p>
